--- a/static/css/global.scss
+++ b/static/css/global.scss
@@ -1,3 +1,14 @@
 .min-h-page {
   min-height: calc(100vh - 56px);
 }
+
+.moveR-enter-active,  .moveR-leave-active {
+  transition: all 0.3s linear;
+  transform: translateX(0);
+}
+ .moveR-enter,  .moveR-leave {
+  transform: translateX(-100%);
+}
+ .moveR-leave-to{
+   transform: translateX(-100%);
+ }
