--- a/static/css/global.scss
+++ b/static/css/global.scss
@@ -1,9 +1,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
 *{
-  // outline: 1px solid red;
+  // outline: 1px solid yellowgreen;
 }
+
 .min-h {
   &-page {
     min-height: calc(100vh - 56px);
@@ -43,15 +45,16 @@ a.nuxt-link-active {
 a.nuxt-link-exact-active {
   @apply text-line #{!important};
   @apply bg-currentColor relative;
+  
   &::after{
+    @apply absolute h-full w-1 right-px;
+    
     content: '';
-    position: absolute;
-    right: 2px;
-    height: 100%;
-    width: 3px;
     background-color: theme('colors.line');
   }
 }
+
 body{
   font-family: "Noto Sans TC", sans-serif;
+  -webkit-font-smoothing:antialiased;
 }
